syntax = "proto3";
package mycchain.payment.v1;

option go_package = "myc-chain/x/payment/types";

// Merchant defines the Merchant message.
message Merchant {
  string index = 1;
  string name = 2;
  string status = 3;
  int64 registered_at = 4;
  string creator = 5;
}
